# remote_sensing

./: .gitignore  CITATION.cff  CONTRIBUTING.md  FILE_MANIFEST.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: datasets.yaml  eval.yaml  model_geomex_base.yaml  train_stage1.yaml  train_stage2.yaml
configs/ablations/: augmentation.yaml  csgm.yaml  progressive_training.yaml  routing.yaml  tokenization.yaml
docs/: ABLATIONS.md  DATASETS.md  EVALUATION.md  MODEL_CARD.md  PAPER_ALIGNMENT.md  TRAINING.md
examples/: inference_request.json  sample_instruction.jsonl
results/: README.md
scripts/: build_instruction_corpus.py  convert_dior_rsvg.py  convert_dota.py  convert_fair1m.py  convert_isaid.py  convert_refsegrs.py  convert_xview.py  evaluate.py  export_results.py  infer.py  run_ablation.py  train_stage1.py  train_stage2.py
src/geomex_vlm/: __init__.py  config.py
src/geomex_vlm/evaluation/: evaluator.py  metrics.py
src/geomex_vlm/model/: csgm.py  geomex.py  losses.py  moe.py  projector.py  spatial_tokens.py  vision_encoder.py
src/geomex_vlm/training/: trainer.py
tests/: test_dataset_schema.py  test_losses.py  test_metrics.py  test_spatial_tokens.py
