[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomex-vlm"
version = "0.1.0"
description = "Geo-memory-guided sparse expert VLM for strategic asset grounding in remote sensing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "GeoMEx-VLM Authors"}]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
